# forge

./: .gitignore  LICENSE  README.md  pyproject.toml  scratch_neb_analysis.ipynb  scratch_notebook.ipynb
core/: database.py
forge/: __init__.py  cli.py
forge/analysis/: __init__.py  aa_selection.py  composition.py  wc-sro.py
forge/config/: database.yaml
forge/core/: __init__.py  adversarial_attack.py  calculator.py  database.py  defect_motifs.py
forge/core/motifs/: A15.xyz  C15.xyz  di-sia.xyz  di-vacancy.xyz  dia.xyz  fcc.xyz  gamma_surface.xyz  hcp.xyz  liquid.xyz  short_range.xyz  sia.xyz  surf_liquid.xyz  surface_100.xyz  surface_110.xyz  surface_111.xyz  surface_112.xyz  tri-vacancy.xyz  vacancy.xyz
forge/potentials/: __init__.py  mace.py
forge/tests/: __init__.py  conftest.py  test_adversarial_attack.py  test_composition_analysis.py  test_database.py  test_db_to_mace.py  test_db_to_vasp.py  test_gradient_aa.py  test_mace_calculator.py  test_md_simulator.py  test_neb.py  test_nnmd.py
forge/tests/resources/: README.md  utils.py
forge/tests/resources/structures/: neb_structures.xyz
forge/tests/resources/test_output/: Cr64V64_V_to_Cr_site0_to_127_initial.xyz  test_results.json
forge/tests/test_mace_jobs/gen_0_test-2025-02-17/: gen_0_test-2025-02-17_model_0_train.sh  gen_0_test-2025-02-17_model_1_train.sh  gen_0_test-2025-02-17_model_2_train.sh  structure_splits.json
forge/workflows/: __init__.py  adversarial_attack.py  db_to_allegro.py  db_to_mace.py  db_to_vasp.py  db_to_vasp_old.py  helpers.py  hpo_sweep.py  mcmc.py  md.py  neb.py  profiles.py  relax.py  train_mace.py  vasp_parser.py  vasp_to_db.py
forge/workflows/aa_utils/: __init__.py  optimization_engine.py
forge/workflows/adversarial_attack/: __init__.py  aa_driver.py  optimization_engine.py  run_aa.py  slurm_templates.py  workflow_setup.py
forge/workflows/adversarial_attack/aa_test_workflow/: test_structures.xyz
forge/workflows/elasticity/: lammps_elasticity.py
forge/workflows/hpc_profiles/: PSFC-GPU-AA.json  PSFC-GPU.json  Perlmutter-CPU.json  Perlmutter-GPU-NEB.json
forge/workflows/nnmd/: nnmd.py
forge/workflows/templates/: allegro_slurm_template.sh  allegro_template.yaml  mace_train_template.sh
forge/workflows/vasp_settings/: neb-vtst.json  neb.json  relaxation.json  static.json
potentials/: mace.py
scratch/notebooks/: Cr177Ti209V3485W209Zr16_V_to_V_site3174_to_3158_initial.xyz  Cr177Ti209V3485W209Zr16_V_to_V_site3507_to_3763_initial.xyz  Cr177Ti209V3485W209Zr16_V_to_V_site3507_to_3780_initial.xyz  cr_100_surfaces.xyz  create_neb_jobs.ipynb  elastic_property_prediction.ipynb  project.csv  rmse_variance_data.json  scratch_aa_test.ipynb  scratch_adversarial_attack.ipynb  scratch_composition_analysis.ipynb  scratch_db_to_mace.ipynb  scratch_db_to_vasp.ipynb  scratch_defect_motifs.ipynb  scratch_mcmc.ipynb  scratch_neb_analysis.ipynb  scratch_neb_workflow.ipynb  scratch_notebook.ipynb  scratch_test_energy_dist.ipynb  scratch_vasp_to_db.ipynb  scratch_vasp_vs_mace.ipynb
scratch/potentials/: gen_5_model_0-11-28_stagetwo.model  gen_6_model_0_L0_isolated-2026-01-16_stagetwo.model
scratch/potentials/mace_gen_6_ensemble/: gen_7_model_0-2025-02-12_stagetwo_compiled.model  gen_7_model_1-2025-02-12_stagetwo_compiled.model  gen_7_model_2-2025-02-12_stagetwo_compiled.model
scratch/potentials/mace_gen_7_ensemble/: job_gen_7-2025-04-14_model_0_pr_stagetwo.model  job_gen_7-2025-04-14_model_1_pr_stagetwo.model  job_gen_7-2025-04-14_model_2_pr_stagetwo.model  job_gen_7-2025-04-14_model_3_pr_stagetwo.model  job_gen_7-2025-04-14_model_4_pr_stagetwo.model
scratch/scripts/: aa_test_run.py  al_functions.py  analyze_config_json.py  create_hpo_sweep.py  evaluate_configs.py  example_vcrtiwzr.xyz  feature_extraction.py  final_Cr132Ti177V3853W221Zr11.xyz  gen6_results_b1.json  gen6_results_b1_warmup.json  gen6_results_b32.json  grab_pruned_dataset.py  initial_Cr132Ti177V3853W221Zr11.xyz  run_mcmc.py  run_neb.py  selected_ids_gen6_k10000.txt  test_ase_mace_calc.py  test_gradient_aa.py
scratch/scripts/aa_manual/: README.md  calculate_variance.py  combine_force_var.py  combine_variances.py  run_aa.py  run_aa.slurm  variance_calculation.slurm
scratch/scripts/aa_manual/slurm_logs/: aa_gen_13962_0.err  aa_gen_13962_0.out  aa_gen_13962_1.err  aa_gen_13962_1.out  aa_gen_13962_10.err  aa_gen_13962_10.out  aa_gen_13962_11.err  aa_gen_13962_11.out  aa_gen_13962_12.err  aa_gen_13962_12.out  (+118 more)
tests/: test_mace_calculator.py
tests/resources/structures/: POSCAR_0.xyz  POSCAR_1.xyz  POSCAR_2.xyz  POSCAR_3.xyz  POSCAR_4.xyz  POSCAR_5.xyz  POSCAR_6.xyz
(+122 files in other folders)
